--- a/files/nginx.conf
+++ b/files/nginx.conf
@@ -30,12 +30,12 @@ http {
       return 444
     ;}
     ssl_protocols NGINX_SSL_PROTOCOLS;
-    ssl_ciphers NGINX_SSL_CIPHERS;
+    ssl_ciphers   NGINX_SSL_CIPHERS;
     ssl_prefer_server_ciphers on;
-    listen       NGINX_HTTP_PORT
-    listen      NGINX_HTTPS_PORT ssl;
-    server_name  NGINX_DOMAIN NGINX_WWWDOMAIN;
-    access_log   /var/log/NGINX_DOMAIN.access.log  main;
-    root         html;
+    listen        NGINX_HTTP_PORT;
+    listen        NGINX_HTTPS_PORT ssl;
+    server_name   NGINX_DOMAIN NGINX_WWWDOMAIN;
+    access_log    /var/log/NGINX_DOMAIN.access.log main;
+    root          html;
     }
   }
