--- a/files/nginx.conf
+++ b/files/nginx.conf
@@ -27,8 +27,8 @@ http {
   types_hash_max_size 2048;
   server { # NGINX_DOMAIN
    if ($request_method !~ ^(GET|HEAD|POST)$ ){
-      return 444
-    ;}
+      return 444;
+    }
     ssl_protocols NGINX_SSL_PROTOCOLS;
     ssl_ciphers   NGINX_SSL_CIPHERS;
     ssl_prefer_server_ciphers on;
