--- a/files/nginx.conf
+++ b/files/nginx.conf
@@ -21,8 +21,8 @@ http {
   server_names_hash_bucket_size 1024; # this seems to be required for some vhosts
   types_hash_bucket_size 128;
   types_hash_max_size 2048;
-  server { # NGINX_DOMAIN
-   if ( $request_method !~ ^(GET|HEAD|POST)$ ) {
+  server {
+    if ( $request_method !~ ^(GET|HEAD|POST)$ ) {
       return 444;
     }
     ssl_protocols NGINX_SSL_PROTOCOLS;
