--- a/files/nginx.conf
+++ b/files/nginx.conf
@@ -18,7 +18,7 @@ http {
   access_log   /var/log/access.log main;
   sendfile     on;
   tcp_nopush   on;
-  server_names_hash_bucket_size 1024; # this seems to be required for some vhosts
+  server_names_hash_bucket_size 1024;
   types_hash_bucket_size 128;
   types_hash_max_size 2048;
   server {
